--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,111 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+.container {
+	width: 900px;
+	margin: auto;
+}
+
+header nav {
+	position: fixed;
+	top: 0px;
+	z-index: 1;
+	background: white;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 900px;
+	box-shadow: 0 4px 4px lightgray;
+}
+
+header nav a {
+	margin: 25px 25px 25px 0;
+	padding: 15px;
+	text-decoration: none;
+	color: gray;
+}
+
+.cta {
+	margin-top: 100px;
+	margin-bottom: 50px; 
+	display: flex;
+}
+
+.cta-text {
+	width: 880px;
+}
+
+.cta-text h1.heading {
+	font-size: 90px;
+	text-align: center;
+}
+
+.cta-text button {
+	background: dodgerblue;
+	border: 1px solid black;
+	border-radius: 4px;
+	background-color: white;
+	cursor: pointer;
+	padding: 5px 30px;
+	font-size: 16px;
+	text-align: center;
+	margin-left: 35%;
+	-webkit-transition-duration: 0.4s;
+  	transition-duration: 0.4s;
+} 
+
+.cta-text button:hover {
+	background-color: dodgerblue;
+  	color: white;
+}
+
+.main-content {
+	margin-top: 20px;
+	display: inline-block;
+	
+}
+
+.top-content .text-content {
+	width: 50%;
+	float: left;	
+}
+
+.top-content {
+	border-top: 1px solid black;
+	padding: 20px 0;
+}
+
+.middle-img {
+	width: 100%;
+	height: 200px;
+	margin: 30px 0;
+}
+
+.bottom-content {
+	width: 100%;
+	margin-bottom: 20px;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.bottom-content .text-content {
+	width: 32%;
+	float: left;
+	align-items: center;
+	justify-content: space-evenly;
+}
+
+section.contact {
+	margin: 30px 0;
+	border-top: 1px solid black;
+}
+
+.contact h3 {
+	margin-top: 20px;
+}
+
+footer{
+	margin: 100px;
+	text-align: center;
+}
